compile_fail_tests/tuple_arity_too_high.rs
use const_destructure::const_destructure;

fn main() {
    const_destructure!(let (a,b,c) = (1, 2));
}
